--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             <div class="header-right">
                 <a href="#">Pelajaran</a>
                 <a href="#">Daftar</a>
+                <a href="#">Guru</a>
+                <a href="#">Jadwal</a>
                 <a href="#" class="login">Log in</a>
             </div>
         </div>
