--- a/index.html
+++ b/index.html
@@ -24,8 +24,18 @@
             </div>
         </div>
     </header>
-    <div class="container">
-        <h1>Apakah sudah bisa di pull dan push?</h1>
+    <div class="top-wrapper">
+            <div class="container">
+                <h1>BELAJAR CODING.</h1>
+                <h1>BELAJAR MENJADI LEBIH KREATIF.</h1>
+                <p>Progate adalah platform online untuk belajar pemrograman.</p>
+                <p>Kami menawarkan lingkungan pemrograman yang lengkap untuk mempermudah Anda memulai.</p>
+                <div class="btn-wrapper">
+                  <a href="#" class="btn signup">Daftar dengan Email</a>
+                  <p>atau</p>
+                  <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Daftar dengan Facebook</a>
+                  <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Daftar dengan Twitter</a>
+            </div>
     </div>
 </body>
 </html>
