--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="stylesheet.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;700;900&display=swap" rel="stylesheet">
+    <link href="https://cdn.materialdesignicons.com/2.1.19/css/materialdesignicons.min.css" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -16,26 +17,93 @@
             </div>
             <span class="fa fa-bars menu-icon"></span>
             <div class="header-right">
-                <a href="#">Pelajaran</a>
-                <a href="#">Daftar</a>
-                <a href="#">Guru</a>
-                <a href="#">Jadwal</a>
-                <a href="#" class="login">Log in</a>
+                <a href="#">Home</a>
+                <a href="#">About Us</a>
+                <a href="#">Services</a>
+                <a href="#">Client</a>
+                <a href="#">Contact Us</a>
             </div>
         </div>
     </header>
     <div class="top-wrapper">
-            <div class="container">
-                <h1>BELAJAR CODING.</h1>
-                <h1>BELAJAR MENJADI LEBIH KREATIF.</h1>
-                <p>Progate adalah platform online untuk belajar pemrograman.</p>
-                <p>Kami menawarkan lingkungan pemrograman yang lengkap untuk mempermudah Anda memulai.</p>
-                <div class="btn-wrapper">
-                  <a href="#" class="btn signup">Daftar dengan Email</a>
-                  <p>atau</p>
-                  <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Daftar dengan Facebook</a>
-                  <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Daftar dengan Twitter</a>
+            <h1>1UP CONSULTANTS</h1>
+            <h3>Level up your business, one stage at a time</h3>
+    </div>
+    <div class="service-wrapper">
+        <div class="container">
+            <div class="service-heading">
+                <h1>Our Services</h1>
             </div>
+            <div class="service-items">
+                <div class="service-item">
+                    <h3>Planning</h3>
+                    <div class="service-image">
+                        <img src="./static/service1.png"width="100%">
+                        <div class="service-overlay">
+                            <div class="service-text">
+                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid suscipit odit repellat ullam ab itaque natus sint</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="service-item">
+                    <h3>Financing</h3>
+                    <div class="service-image">
+                        <img src="./static/service2.jpg"width="100%">
+                        <div class="service-overlay">
+                            <div class="service-text">
+                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid suscipit odit repellat ullam ab itaque natus sint</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="service-item">
+                    <h3>Recruiting</h3>
+                    <div class="service-image">
+                        <img src="./static/service3.jpg"width="100%">
+                        <div class="service-overlay">
+                            <div class="service-text">
+                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid suscipit odit repellat ullam ab itaque natus sint</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="service-item">
+                    <h3>Tech Support</h3>
+                    <div class="service-image">
+                        <img src="./static/service4.jpg"width="100%">
+                        <div class="service-overlay">
+                            <div class="service-text">
+                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid suscipit odit repellat ullam ab itaque natus sint</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="contact-wrapper">
+        <div class="container">
+            <h1>Contact Us</h1>
+            <p>Contact us for more information and special prices</p>
+            <div class="contact-section">
+                <div class="contact-item">
+                    <p><span class="mdi mdi-home"></span>Jl. Panjang Sekali 123, Gandaria, Jakarta Selatan</p>
+                </div>
+                <div class="contact-item">
+                    <p><span class="mdi mdi-phone"></span>(021) 1111-4444</p>
+                </div>
+                <div class="contact-item">
+                    <p><span class="mdi mdi-gmail"></span>kontak@1upconsultant.com</p>
+                </div>
+                <div class="contact-item">
+                    <p><span class="mdi mdi-instagram"></span>1upconsultant</p>
+                </div>
+            </div>
+            <div class="contact-section">
+
+            </div>
+        </div>
     </div>
 </body>
 </html>
