--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
     <header>
         <div class="container">
             <div class="header-left">
-                <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
+                <img class="logo" src="./static/1up.png">
             </div>
             <span class="fa fa-bars menu-icon"></span>
             <div class="header-right">
                 <a href="#">Home</a>
-                <a href="#">About Us</a>
-                <a href="#">Services</a>
-                <a href="#">Client</a>
-                <a href="#">Contact Us</a>
+                <a href="#about">About Us</a>
+                <a href="#service">Services</a>
+                <a href="#client">Client</a>
+                <a href="#contact">Contact Us</a>
             </div>
         </div>
     </header>
-    <div class="top-wrapper">
+    <div class="top-wrapper" id="header">
             <h1>1UP CONSULTANTS</h1>
             <h3>Level up your business, one stage at a time</h3>
     </div>
-    <div class="service-wrapper">
+    <div class="service-wrapper" id="service">
         <div class="container">
             <div class="service-heading">
                 <h1>Our Services</h1>
@@ -87,23 +87,42 @@
             <h1>Contact Us</h1>
             <p>Contact us for more information and special prices</p>
             <div class="contact-section">
-                <div class="contact-item">
-                    <p><span class="mdi mdi-home"></span>Jl. Panjang Sekali 123, Gandaria, Jakarta Selatan</p>
-                </div>
-                <div class="contact-item">
-                    <p><span class="mdi mdi-phone"></span>(021) 1111-4444</p>
-                </div>
-                <div class="contact-item">
-                    <p><span class="mdi mdi-gmail"></span>kontak@1upconsultant.com</p>
-                </div>
-                <div class="contact-item">
-                    <p><span class="mdi mdi-instagram"></span>1upconsultant</p>
-                </div>
+                
             </div>
             <div class="contact-section">
 
             </div>
         </div>
     </div>
+    <footer id="bottom">
+        <div class="container">
+            <div class="footer-content">
+                <img src="./static/1up-2.png" alt="">
+                <h3>Level up your business!</h3>
+                <div class="footer-contact">
+                    <p><span class="mdi mdi-home"></span>Jl. Panjang Sekali 123, Gandaria, Jakarta Selatan</p>
+                    <p><span class="mdi mdi-phone"></span>(021) 1111-4444</p>
+                    <p><span class="mdi mdi-gmail"></span>kontak@1upconsultant.com</p>
+                    <p><span class="mdi mdi-instagram"></span>1upconsultant</p>
+                </div>
+            </div>
+            <div class="footer-content">
+                <div class="footer-list">
+                    <a href="#header">
+                        <p>Home</p>
+                    </a>
+                    <a href="#about">
+                        <p>About Us</p>
+                    </a>
+                    <a href="#service">
+                        <p>Services</p>
+                    </a>
+                    <a href="#contact">
+                        <p>Contact</p>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
