final responsive, kinda

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="header-left">
                 <img src="./static/1upnew.png">
             </div>
-            <span class="fa fa-bars menu-icon"></span>
+            <span class="mdi mdi-menu menu-icon"></span>
             <div class="header-right">
                 <a href="/">Home</a>
                 <a href="#about">About Us</a>
@@ -108,7 +108,7 @@
     
     <div class="location-wrapper" id="contact">
         <div class="container">
-            <div class="heading">
+            <div class="location-heading">
                 <h1>Contact Us</h1>
             </div>
             <div class="locations">
