--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <link href="https://cdn.materialdesignicons.com/2.1.19/css/materialdesignicons.min.css" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <header id="top">
         <div class="container">
             <div class="header-left">
                 <img src="./static/1upnew.png">
             </div>
             <span class="mdi mdi-menu menu-icon"></span>
             <div class="header-right">
-                <a href="/">Home</a>
+                <a href="#top">Home</a>
                 <a href="#about">About Us</a>
                 <a href="#service">Services</a>
                 <a href="#contact">Contact Us</a>
