--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.materialdesignicons.com/2.1.19/css/materialdesignicons.min.css" rel="stylesheet">
 </head>
 <body>
-    <header id="top">
+    <header>
         <div class="container">
             <div class="header-left">
                 <img src="./static/1upnew.png">
@@ -26,7 +26,7 @@
         </div>
     </header>
 
-    <div class="top-wrapper">
+    <div class="top-wrapper" id="top">
             <h1>1UP CONSULTANT</h1>
             <h3>Level up your business, one stage at a time</h3>
     </div>
