--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
     </header>
 
     <div class="top-wrapper" id="top">
+    	<slider>
+            <slide></slide>
+            <slide></slide>
+            <slide></slide>
+            <slide></slide>
+    	</slider>
+    	    <br>
             <h1>1UP CONSULTANT</h1>
             <h3>Level up your business, one stage at a time</h3>
     </div>
